@@ -129,6 +129,7 @@ static struct gui_help_item gui_help_items[] = {
     { MINIBUF,        "minibuffer" },
     { VLAGSEL,        "VAR-lagselect" },
     { VAROMIT,        "VAR-omit" },
+    { PANEL_MODE,      "panel-mode" },
     { -1,          NULL },
 };
 
