@@ -99,6 +99,7 @@ enum ts_codes {
     TIME_SERIES,
     STACKED_TIME_SERIES,
     STACKED_CROSS_SECTION,
+    PANEL_UNKNOWN,
     SPECIAL_TIME_SERIES,
     STRUCTURE_UNKNOWN
 };
